--- a/drag.html
+++ b/drag.html
@@ -10,9 +10,15 @@
             width: 100px;
             height: 100px;
             background: red;
-            
+
         }
     </style>
+    <script>
+    window.onload=function(){
+        var oBox=document.getElementById('box');
+        
+    }
+    </script>
 </head>
 <body>
     <div id="box"></div>
